api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: narae-api
  namespace: narae
spec:
  selector:
    matchLabels:
      app: narae-api
  template:
    metadata:
      labels:
        app: narae-api
    spec:
      containers:
        - name: narae-api
          image: ghcr.io/naraeforest/api:0.0.2
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 4000
