api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: narae-api
  namespace: narae-api
spec:
  selector:
    app: narae-api
  ports:
  - port: 80
    targetPort: 4000
