api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: narae-api
  namespace: narae
  labels:
    name: narae-api
spec:
  ingressClassName: nginx
  rules:
    - host: api.narae.narumir.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: narae-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.narae.narumir.io
      secretName: api-cert
